--- a/HW7/index.html
+++ b/HW7/index.html
@@ -13,6 +13,7 @@
         <div id="playButton" class="menuButton">Старт</div>
         <div id="newGameButton" class="menuButton">Новая игра</div>
     </div>
+    <div id='score'></div>
     <script src="status.js"></script>
     <script src="food.js"></script>
     <script src="snake.js"></script>
